--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
         <title>My First Website</title>
     </head>
     <body>
-       Hello, World, and welcome to my first website!
-	   
-	   I will continue to update this website over the next few months; so please check back in soon!
+       <p>Hello, World, and welcome to my first website! </p>
+	   <p>I will continue to update this website over the next few months; so please check back in soon!</p>
     </body>
 </html>
